failed try to implement persistence api